# RAM-Predictions

./: .gitignore  :terminal  README.md  data.py  graphs.py  main.py  model.py  preprocessing.py  pyproject.toml  ram_data.csv  requirements.txt  transform_data.py
data/: memory.csv  memory.xlsx  ram_data.csv
data_manipulation/: data.py  excel.py
src/: feature_importance.py  hyperparameter_tuning.py  main.py  model_persistence.py  model_training.py  prediction.py  preprocessing.py  train_best_model.py  visualization.py
