[project]
name = "ram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Data Manipulation & Math
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    # Machine Learning
    "scikit-learn>=1.8.0",
    # Visualization
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    # Excel file handling
    "openpyxl>=3.1.5",
    # Web Scraping
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "lxml>=6.0.2",
    "cloudscraper>=1.2.71",
    "ruff>=0.14.10",
]

[project.optional-dependencies]
# Optional: Jupyter for notebook development
jupyter = [
    "jupyterlab>=4.5.1",
    "ipykernel>=7.1.0",
]

# Optional: Additional ML models
ml-extras = [
    "xgboost>=3.1.2",
    "scipy>=1.16.3",
]

# Optional: Web automation (if needed in future)
web-automation = [
    "selenium>=4.39.0",
    "seleniumbase>=4.45.6",
    "webdriver-manager>=4.0.2",
]

# Optional: Amazon price tracking
amazon = [
    "keepa>=1.4.0",
]
